modificamos los links de las paginas

--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -7,8 +7,8 @@
     <meta name="author" content="thomas jerez" />
     <meta name="description" content="funkos" />
     <meta name="keywords" content="panaderia, panes, contactos" />
-    <link rel="stylesheet" href="/Panaderia cocu/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/Panaderia cocu/css/style.css" />
+    <link rel="stylesheet" href="/Panaderia cocu2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/Panaderia cocu2/css/style.css" />
 
     <title>Panaderia cocu</title>
   </head>
@@ -16,10 +16,10 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="/Panaderia cocu/index.html">
+            <a class="navbar-brand" href="/Panaderia cocu2/index.html">
 
           <img
-            src="/Panaderia cocu/img/cocu_logo-450.png"
+            src="/Panaderia cocu2/img/cocu_logo-450.png"
             alt="logo de la empresa"
             width="90"
         
@@ -79,7 +79,7 @@
         >
           <h1>
             <img
-              src="/Panaderia cocu/img/cocu_logo-450.png"
+              src="/Panaderia cocu2/img/cocu_logo-450.png"
               alt="cocu_logo-450"
               width="130"
               height="100"
@@ -99,6 +99,6 @@
       </div>
     </div>
   </footer>
-  <script src="/Panaderia cocu/js/bootstrap.min.js"></script>
+  <script src="/Panaderia cocu2/js/bootstrap.min.js"></script>
 </body>
 </html>
