--- a/pages/productos.html
+++ b/pages/productos.html
@@ -8,8 +8,8 @@
   <meta name="author" content="thomas jerez" />
   <meta name="description" content="Panes" />
   <meta name="keywords" content="panaderia, panes, contactos" />
-  <link rel="stylesheet" href="/Panaderia cocu/css/style.css" />
-  <link rel="stylesheet" href="/Panaderia cocu/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/Panaderia cocu2/css/style.css" />
+  <link rel="stylesheet" href="/Panaderia cocu2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
   <script src="https://kit.fontawesome.com/cae5aa21ab.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
@@ -21,8 +21,8 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
       <div class="container">
-        <a class="navbar-brand" href="/Panaderia cocu/index.html">
-          <img src="/Panaderia cocu/img/cocu_logo-450.png" alt="logo de la empresa" width="90" />
+        <a class="navbar-brand" href="/Panaderia cocu2/index.html">
+          <img src="/Panaderia cocu2/img/cocu_logo-450.png" alt="logo de la empresa" width="90" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav"
           aria-expanded="false" aria-label="Toggle navigation">
@@ -31,16 +31,16 @@
         <div class="collapse navbar-collapse" id="nav">
           <ul class="navbar-nav ms-lg-auto me-auto me-lg-0 mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link " href="/Panaderia cocu/index.html">Inicio</a>
+              <a class="nav-link " href="/Panaderia cocu2/index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="/Panaderia cocu/contactos.html">Contactos</a>
+              <a class="nav-link " href="/Panaderia cocu2/contactos.html">Contactos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="/Panaderia cocu/historia.html">Historia</a>
+              <a class="nav-link " href="/Panaderia cocu2/historia.html">Historia</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/Panaderia cocu/productos.html">Productos</a>
+              <a class="nav-link active" aria-current="page" href="/Panaderia cocu2/productos.html">Productos</a>
             </li>
           </ul>
         </div>
@@ -54,7 +54,7 @@
       <article class="row">
         <aside class="col-12 col-md-4 col-lg-3 mb-3">
           <div class="card">
-            <img src="/Panaderia cocu/img/productos/Croissant_00018_portfolio1.jpg" class="card-img-top"
+            <img src="/Panaderia cocu2/img/productos/Croissant_00018_portfolio1.jpg" class="card-img-top"
               alt="medialuna">
             <div class="card-body">
               <h5 class="card-title">Medialunas <span class="badge bg-danger">Nuevo</span></h5>
@@ -67,7 +67,7 @@
         </aside>
         <aside class="col-12 col-md-4 col-lg-3 mb-3">
           <div class="card">
-            <img src="/Panaderia cocu/img/productos/pan.jpg" class="card-img-top" alt="panFrances">
+            <img src="/Panaderia cocu2/img/productos/pan.jpg" class="card-img-top" alt="panFrances">
             <div class="card-body">
               <h5 class="card-title">Pan Frances <span class="badge text-bg-warning">Nuevo</span></h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -78,7 +78,7 @@
         </aside>
         <aside class="col-12 col-md-4 col-lg-3 mb-3">
           <div class="card">
-            <img src="/Panaderia cocu/img/productos/Eclair_00118_portfolio1.jpg" class="card-img-top" alt="ecleir">
+            <img src="/Panaderia cocu2/img/productos/Eclair_00118_portfolio1.jpg" class="card-img-top" alt="ecleir">
             <div class="card-body">
               <h5 class="card-title">Ecleir</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -89,7 +89,7 @@
         </aside>
         <aside class="col-12 col-md-4 col-lg-3 mb-3">
           <div class="card">
-            <img src="/Panaderia cocu/img/productos/Pan-de-miga_00195_portfolio1.jpg" class="card-img-top"
+            <img src="/Panaderia cocu2/img/productos/Pan-de-miga_00195_portfolio1.jpg" class="card-img-top"
               alt="panMiga">
             <div class="card-body">
               <h5 class="card-title">Pan de miga</h5>
@@ -101,7 +101,7 @@
         </aside>
         <aside class="col-12 col-md-4 col-lg-3 mb-3">
           <div class="card">
-            <img src="/Panaderia cocu/img/productos/Panes-de-campo-corte_00162_portfolio1.jpg" class="card-img-top"
+            <img src="/Panaderia cocu2/img/productos/Panes-de-campo-corte_00162_portfolio1.jpg" class="card-img-top"
               alt="panCampo">
             <div class="card-body">
               <h5 class="card-title">Pan de campo</h5>
@@ -113,7 +113,7 @@
         </aside>
         <aside class="col-12 col-md-4 col-lg-3 mb-3">
           <div class="card">
-            <img src="/Panaderia cocu/img/productos/Panes-negros-corte_00170_portfolio1.jpg" class="card-img-top"
+            <img src="/Panaderia cocu2/img/productos/Panes-negros-corte_00170_portfolio1.jpg" class="card-img-top"
               alt="panNegro">
             <div class="card-body">
               <h5 class="card-title">Pan negro</h5>
@@ -125,7 +125,7 @@
         </aside>
         <aside class="col-12 col-md-4 col-lg-3 mb-3">
           <div class="card">
-            <img src="/Panaderia cocu/img/productos/Paris-Brest_00140_portfolio.jpg" class="card-img-top"
+            <img src="/Panaderia cocu2/img/productos/Paris-Brest_00140_portfolio.jpg" class="card-img-top"
               alt="parisBrest">
             <div class="card-body">
               <h5 class="card-title">Medialunas</h5>
@@ -137,7 +137,7 @@
         </aside>
         <aside class="col-12 col-md-4 col-lg-3 mb-3">
           <div class="card">
-            <img src="/Panaderia cocu/img/productos/Torta-de-chocolate_00098_portfolio.jpg" class="card-img-top"
+            <img src="/Panaderia cocu2/img/productos/Torta-de-chocolate_00098_portfolio.jpg" class="card-img-top"
               alt="tortaChocolate">
             <div class="card-body">
               <h5 class="card-title">Medialunas</h5>
@@ -149,7 +149,7 @@
         </aside>
         <aside class="col-12 col-md-4 col-lg-3 mb-3">
           <div class="card">
-            <img src="/Panaderia cocu/img/productos/Brioche-larga-oscura_00059_portfolio1.jpg" class="card-img-top"
+            <img src="/Panaderia cocu2/img/productos/Brioche-larga-oscura_00059_portfolio1.jpg" class="card-img-top"
               alt="brioche">
             <div class="card-body">
               <h5 class="card-title">Medialunas</h5>
@@ -161,7 +161,7 @@
         </aside>
         <aside class="col-12 col-md-4 col-lg-3 mb-3">
           <div class="card">
-            <img src="/Panaderia cocu/img/productos/Pan-de-uva-corte_00058_portfolio1.jpg" class="card-img-top"
+            <img src="/Panaderia cocu2/img/productos/Pan-de-uva-corte_00058_portfolio1.jpg" class="card-img-top"
               alt="panUva">
             <div class="card-body">
               <h5 class="card-title">Medialunas</h5>
@@ -198,7 +198,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <img src="/Panaderia cocu/img/productos/Croissant_00018_portfolio1.jpg" class="w-100" alt="medialunas">
+            <img src="/Panaderia cocu2/img/productos/Croissant_00018_portfolio1.jpg" class="w-100" alt="medialunas">
             <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ratione corporis
               aspernatur voluptatibus exercitationem voluptate quae iste quibusdam cum culpa.</p>
             <p>Precio:<b>$60</b></p>
@@ -216,7 +216,7 @@
     <div class="container">
       <div class="row mx-2 justify-content-between">
         <div class="col-12 col-md-6 col-lg-3 d-flex align-items-center justify-content-center justify-content-md-start">
-          <img src="/Panaderia cocu/img/cocu_logo-450.png" alt="Logo de la empresa" width="120" />
+          <img src="/Panaderia cocu2/img/cocu_logo-450.png" alt="Logo de la empresa" width="120" />
         </div>
         <div class="col-12 col-md-4 col-lg-3 ">
           <h5 class="text-secondary ">Horarios de atencion:</h5>
@@ -242,7 +242,7 @@
       </div>
 
   </footer>
-  <script src="/Panaderia cocu/js/bootstrap.min.js"></script>
+  <script src="/Panaderia cocu2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
