agregamos el maquetado de la pagina de historia

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -16,15 +16,13 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="/Panaderia cocu2/index.html">
-
-          <img
-            src="/Panaderia cocu2/img/cocu_logo-450.png"
-            alt="logo de la empresa"
-            width="90"
-        
-          />
-        </a>
+          <a class="navbar-brand" href="/Panaderia cocu2/index.html">
+            <img
+              src="/Panaderia cocu2/img/cocu_logo-450.png"
+              alt="logo de la empresa"
+              width="90"
+            />
+          </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -40,28 +38,27 @@
             <ul class="navbar-nav ms-lg-auto me-auto me-lg-0 mb-2 mb-lg-0">
               <li class="nav-item">
                 <a
-                  class="nav-link "
+                  class="nav-link"
                   aria-current="page"
                   href="/Panaderia cocu2/index.html"
                   >Inicio</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="/Panaderia cocu2/contactos.html"
+                <a class="nav-link" href="/Panaderia cocu2/contactos.html"
                   >Contactos</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/Panaderia cocu2/historia.html"
-                aria-current="page"
-                >Historia</a
+                <a
+                  class="nav-link active"
+                  href="/Panaderia cocu2/historia.html"
+                  aria-current="page"
+                  >Historia</a
                 >
               </li>
               <li class="nav-item">
-                <a
-                  class="nav-link "
-                  href="/Panaderia cocu2/productos.html"
-                  
+                <a class="nav-link" href="/Panaderia cocu2/productos.html"
                   >Productos</a
                 >
               </li>
@@ -70,36 +67,69 @@
         </div>
       </nav>
     </header>
-    <main class="container my-5"></main>
-  
-  <footer class="bg-dark py-4">
-    <div class="container">
-      <div class="row mx-2 justify-content-between">
-        <div
-          class="col-12 col-md-4 d-flex align-items-center justify-content-center justify-content-md-start"
-        >
-          <h1>
-            <img
-              src="/Panaderia cocu2/img/cocu_logo-450.png"
-              alt="cocu_logo-450"
-              width="130"
-              height="100"
-            />
-          </h1>
-        </div>
-        <div class="col-12 col-md-4">
-          <h2 class="text-secondary">Horarios de atencion:</h2>
-          <ul class="text-secondary">
-            <li>Lunes a viernes: 09hs-18hs</li>
-            <li>Sabados, Domingos y Feriados: 09hs-14hs</li>
-          </ul>
-        </div>
-        <div class="col-12 col-md-4">
-          <h2 class="text-secondary">Siguenos en nuestras redes</h2>
+    <main class="container my-5">
+      <section>
+        <h1 class="display-1 text-center">Nuestra historia</h1>
+        <hr>
+        <article class="row">
+          <aside class="col-12 col-md-6">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Temporibus, iure soluta cumque sint, fugiat impedit error delectus
+              sunt quis nobis pariatur perspiciatis deserunt eius omnis
+              doloribus iste ratione velit quidem sed necessitatibus eum
+              reprehenderit molestias. Error, aliquam dolore asperiores tempora
+              numquam quasi explicabo itaque vero architecto eos assumenda
+              reprehenderit nam nemo! Quibusdam iste error dolor iusto minus
+              provident recusandae id nam placeat distinctio? Id itaque iure
+              doloribus in fugiat est molestiae sint voluptatem, saepe ea vitae
+              debitis ab incidunt sunt rerum expedita. Provident quos ut
+              tempora, incidunt minima dolorum obcaecati! Blanditiis
+              necessitatibus consectetur, vitae voluptate sunt quia aperiam
+              harum, explicabo architecto, fugiat perspiciatis alias fugit est
+              natus facere iure dicta. Eum quo suscipit impedit ipsam aperiam
+              alias reiciendis minus fuga, soluta adipisci repellat rerum totam
+              iusto exercitationem pariatur eveniet vero rem sequi provident
+              minima est nihil! Dolores autem ex odit tempora consequatur?
+              Temporibus reprehenderit illum aliquid aliquam, id necessitatibus
+              harum.
+            </p>
+          </aside>
+          <aside class="col-12 col-md-6">
+            <img src="../img/historia.png" alt="Panaderia cocu" class="w-100">
+          </aside>
+        </article>
+      </section>
+    </main>
+
+    <footer class="bg-dark py-4">
+      <div class="container">
+        <div class="row mx-2 justify-content-between">
+          <div
+            class="col-12 col-md-4 d-flex align-items-center justify-content-center justify-content-md-start"
+          >
+            <h1>
+              <img
+                src="/Panaderia cocu2/img/cocu_logo-450.png"
+                alt="cocu_logo-450"
+                width="130"
+                height="100"
+              />
+            </h1>
+          </div>
+          <div class="col-12 col-md-4">
+            <h2 class="text-secondary">Horarios de atencion:</h2>
+            <ul class="text-secondary">
+              <li>Lunes a viernes: 09hs-18hs</li>
+              <li>Sabados, Domingos y Feriados: 09hs-14hs</li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-4">
+            <h2 class="text-secondary">Siguenos en nuestras redes</h2>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
-  <script src="/Panaderia cocu2/js/bootstrap.min.js"></script>
-</body>
+    </footer>
+    <script src="/Panaderia cocu2/js/bootstrap.min.js"></script>
+  </body>
 </html>
