--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link " href="/Panaderia cocu2/contactos.html">Contactos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="/Panaderia cocu2/historia.html">Historia</a>
+              <a class="nav-link " href="../Panaderia cocu2/pages/historia.html">Historia</a>
             </li>
             <li class="nav-item">
               <a class="nav-link "  href="/Panaderia cocu2/productos.html">Productos</a>
