cambie el color del parrafo pagina principal

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <section class="my-5 container">
       <h1 class="display-1 text-center text-primary">Sobre nosotros</h1>
       <hr />
-      <p>
+      <p class="text-primary">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
         reprehenderit, iure soluta, esse, ea dolorem sequi quod nemo labore
         architecto earum necessitatibus porro! At ullam nulla placeat, ipsum,
